# testpipeci

./: pyproject.toml
.github/workflows/: deploy.yml
testpipeci/: cli.py
